# dlssg-to-fsr3

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  BuildSamplesSolutionDX12.bat  BuildSamplesSolutionVK.bat  CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  FidelityFXSDKLayout.xml  LICENSE.md  Make-Release.ps1  README.md  game_compatibility.md  sample.cmake  vcpkg.json
dependencies/FidelityFX-SDK/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  BuildCauldronSolution.bat  BuildSamplesSolutionDX12.bat  BuildSamplesSolutionVK.bat  CMakeLists.txt  CleanAllGeneratedData.bat  ClearMediaCache.bat  Doxyfile  LICENSE.txt  UpdateMedia.bat  common.cmake  modules.rst  readme.md
dependencies/FidelityFX-SDK/PrebuiltSignedDLL/: amd_fidelityfx_dx12.lib  amd_fidelityfx_vk.lib
dependencies/FidelityFX-SDK/docs/: index.md  license.md  sdk.css
dependencies/FidelityFX-SDK/docs/getting-started/: building-samples.md  ffx-api.md  index.md  migration.md  sdk-structure.md
dependencies/FidelityFX-SDK/docs/samples/: blur.md  brixelizer-gi.md  contrast-adaptive-sharpening.md  index.md  lens.md  luminance-preserving-mapper.md  single-pass-downsampler.md  stochastic-screen-space-reflections.md  super-resolution.md
dependencies/FidelityFX-SDK/docs/techniques/: blur.md  brixelizer-gi.md  classifier.md  combined-adaptive-compute-ambient-occlusion.md  contrast-adaptive-sharpening.md  denoiser.md  depth-of-field.md  frame-interpolation-swap-chain.md  frame-interpolation.md  index.md  lens.md  luminance-preserving-mapper.md  optical-flow.md  parallel-sort.md  single-pass-downsampler.md  stochastic-screen-space-reflections.md  super-resolution-interpolation.md  super-resolution-spatial.md  super-resolution-temporal.md  super-resolution-upscaler.md  variable-shading.md
dependencies/FidelityFX-SDK/docs/tools/: index.md  media-delivery.md
dependencies/FidelityFX-SDK/docs/whats-new/: index.md  version_1_0.md  version_1_1.md  version_1_1_1.md  version_1_1_2.md
dependencies/FidelityFX-SDK/ffx-api/: BuildFfxApiDll.bat  CMakeLists.txt
dependencies/FidelityFX-SDK/ffx-api/src/: ffx_api.cpp  ffx_provider_framegeneration.cpp  ffx_provider_framegeneration.h  ffx_provider_fsr3upscale.cpp  validation.cpp  validation.h
dependencies/FidelityFX-SDK/framework/rendermodules/: CMakeLists.txt  rendermoduleregistry.h
dependencies/FidelityFX-SDK/samples/: CMakeLists.txt
dependencies/FidelityFX-SDK/samples/blur/: CMakeLists.txt  blurrendermodule.cpp
dependencies/FidelityFX-SDK/samples/breadcrumbs/: CMakeLists.txt  breadcrumbsrendermodule.cpp  breadcrumbsrendermodule.h
dependencies/FidelityFX-SDK/samples/brixelizergi/: CMakeLists.txt  brixelizergirendermodule.cpp  brixelizergirendermodule.h
dependencies/FidelityFX-SDK/samples/cacao/: CMakeLists.txt  cacaorendermodule.cpp  cacaosample.h
dependencies/FidelityFX-SDK/samples/cas/: CMakeLists.txt  casrendermodule.cpp
dependencies/FidelityFX-SDK/samples/dof/: CMakeLists.txt  dofrendermodule.cpp  dofrendermodule.h
dependencies/FidelityFX-SDK/samples/fsrapi/: CMakeLists.txt  fsrapirendermodule.cpp  fsrapirendermodule.h
dependencies/FidelityFX-SDK/samples/hybridreflections/: CMakeLists.txt  hybridreflectionsrendermodule.cpp
dependencies/FidelityFX-SDK/samples/hybridshadows/: CMakeLists.txt  hybridshadowsrendermodule.cpp  hybridshadowsrendermodule.h
dependencies/FidelityFX-SDK/samples/lens/: CMakeLists.txt  lensrendermodule.cpp  lensrendermodule.h
dependencies/FidelityFX-SDK/samples/lpm/: CMakeLists.txt  lpmrendermodule.cpp
dependencies/FidelityFX-SDK/samples/parallelsort/: CMakeLists.txt  parallelsortrendermodule.cpp  parallelsortrendermodule.h
dependencies/FidelityFX-SDK/samples/spd/: CMakeLists.txt  spdrendermodule.cpp
dependencies/FidelityFX-SDK/samples/sssr/: CMakeLists.txt  sssrrendermodule.cpp  sssrrendermodule.h
dependencies/FidelityFX-SDK/samples/vrs/: CMakeLists.txt  vrsrendermodule.cpp  vrsrendermodule.h
dependencies/FidelityFX-SDK/sdk/: BuildFidelityFXSDK.bat  BuildFidelityFXSDKSolutionDX12.bat  BuildFidelityFXSDKSolutionVK.bat  CMakeLists.txt  CMakeWorkaroundPatches.cmake  toolchain.cmake
framework/cauldron/framework/: CMakeLists.txt
sdk/: BuildFidelityFXSDK.bat  BuildFidelityFXSDKSolutionDX12.bat  CMakeLists.txt
sdk/include/FidelityFX/gpu/: CMakeCompileShaders.txt  ffx_core_gpu_common.h  ffx_core_gpu_common_half.h
sdk/include/FidelityFX/host/: ffx_blur.h  ffx_brixelizer.h  ffx_brixelizer_raw.h  ffx_brixelizergi.h  ffx_denoiser.h  ffx_fsr1.h  ffx_fsr3.h  ffx_fx.h  ffx_interface.h  ffx_sssr.h  ffx_types.h
sdk/libs/pix/: CMakeLists.txt  FFX_SDK_README.md  WinPixEventRuntime.lib
sdk/src/backends/dx12/: CMakeLists.txt  CMakeShadersBrixelizer.txt  CMakeShadersCACAO.txt  CMakeShadersClassifier.txt  CMakeShadersFSR1.txt  CMakeShadersFSR2.txt  CMakeShadersFSR3Upscaler.txt  CMakeShadersLPM.txt  CMakeShadersParallelSort.txt  CMakeShadersSPD.txt  CMakeShadersSSSR.txt
sdk/src/backends/shared/: ffx_shader_blobs.cpp
sdk/src/backends/vk/: CMakeShadersBLUR.txt  (+10 more)
sdk/src/shared/: ffx_breadcrumbs_list.h  ffx_object_management.cpp  ffx_object_management.h
sdk/tools/ffx_shader_compiler/: GenerateSolution.bat
source/maindll/: CMakeLists.txt  DllMain.cpp  FFDilator.cpp  FFDilator.h  FFExt.h  FFFrameInterpolator.cpp  FFFrameInterpolator.h  FFFrameInterpolatorDX.cpp  FFFrameInterpolatorDX.h  FFFrameInterpolatorVK.cpp  FFFrameInterpolatorVK.h  FFFrameInterpolatorVKToDX.cpp  FFFrameInterpolatorVKToDX.h  FFInterfaceWrapper.cpp  FFInterfaceWrapper.h  FFInterpolator.cpp  FFInterpolator.h  FFUIMask.cpp  FFUIMask.h  FFXCommon.h  FFXDilation.cpp  FFXDilation.h  FFXInterpolator.h  NvNGX.h  NvNGXDirectX12.cpp  NvNGXExports.cpp  NvNGXVulkan.cpp  PCH.h  Util.cpp  Util.h  dllmain.cpp  pch.h
source/maindll/NGX/: NvNGX.h  NvNGXCuda.cpp  NvNGXDirectX11.cpp  NvNGXDirectX12.cpp  NvNGXVulkan.cpp
source/wrapper_generic/: CMakeLists.txt  EOSOverlay.cpp  ExportListing.inc  PCH.h  Proxies.cpp  Util.h  dllmain.cpp  nvapi.cpp  proxies.cpp
source/wrapper_generic/Hooking/: Hooks.h  Memory.cpp  Memory.h
(+1328 files in other folders)
